--- a/DemoVideo.html
+++ b/DemoVideo.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<img src="C:\Users\LOWCHINANN\OneDrive\Desktop\FYP WebPage/Banner design.jpg" class="banner-img">
+	<img src="Images/Banner design.jpg" class="banner-img">
 		<nav>
 			<ul>
 				<li><a href="FYP.html"> <img src="Images/home.png" alt="Home" class="home-icon">Home </a></li>
