--- a/DemoVideo.html
+++ b/DemoVideo.html
@@ -4,7 +4,7 @@
 	<title> Demo Video Webpage </title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="UM">
 	<img src="Images/Banner design.jpg" class="banner-img">
 		<nav>
 			<ul>
