--- a/DemoVideo.html
+++ b/DemoVideo.html
@@ -8,7 +8,7 @@
 	<img src="Images/Banner design.jpg" class="banner-img">
 		<nav>
 			<ul>
-				<li><a href="FYP.html"> <img src="Images/home.png" alt="Home" class="home-icon">Home </a></li>
+				<li><a href="index.html"> <img src="Images/home.png" alt="Home" class="home-icon">Home </a></li>
 			</ul>
 		</nav>
 	<div class="DMV">
