--- a/PRD.html
+++ b/PRD.html
@@ -4,7 +4,7 @@
 	<title> PRD Webpage </title>
 </head>
 <body>
-	<button onclick="window.location.href='FYP.html'"> Go back </button>
+	<button onclick="window.location.href='index.html'"> Go back </button>
 	<h3> PRD </h3>
 	<div style="display: flex; justify-content: center;">
 		<iframe src="https://docs.google.com/document/d/e/2PACX-1vSNhcgtwjo6FsXoeWTWy6Qb2ijty8-oIo6-KI5utdJBQmIcdW32XozfBShY9X99ZoKzWpEel5QSoYS0/pub?embedded=true"
