--- a/PowerPoint.html
+++ b/PowerPoint.html
@@ -4,7 +4,7 @@
 	<title> PowerPoint Webpage </title>
 </head>
 <body>
-	<button onclick="window.location.href='FYP.html'"> Go back </button>
+	<button onclick="window.location.href='index.html'"> Go back </button>
 	<h3> PowerPoint Webpage </h3>
 	<div style="display: flex; justify-content: center; ">
 		<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSAwz9KhygjdXCjxqTdIYb7P7LKKi5kXPXo_RG0piE5AH1E4GalHv7RxntoKwls-RyNe6AL7MdmFOrp/pubembed?start=true&loop=true&delayms=3000" 
