--- a/TechnicalDocument.html
+++ b/TechnicalDocument.html
@@ -4,7 +4,7 @@
 	<title> Technical Document Webpage </title>
 </head>
 <body>
-	<button onclick="window.location.href='FYP.html'"> Go back </button>
+	<button onclick="window.location.href='index.html'"> Go back </button>
 	<h3> Techical Documentation </h3>
 	<div style="display: flex; justify-content: center;">
 		<iframe src="https://docs.google.com/document/d/e/2PACX-1vRk6sLXYCJP2wurekSurS6Ft4wvkFZj3IMNxcNMcqLjr7x5P8D-wbHXPgN0ktW_E__ZRP6jUsk5XN5w/pub?embedded=true"
